--- a/src/component/App.css
+++ b/src/component/App.css
@@ -3,10 +3,17 @@
   margin-top: 100px;
   padding: 40px;
   border: 1px solid black;
+  z-index: 1
 }
 
 .control-row {
   margin-bottom: 3px;
+}
+
+.timerSetup {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 @media(max-width: 650px){
@@ -36,4 +43,72 @@
   margin: 60px;
   height: 100px;
   width: 400px;
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: red;
+}
+
+.overlay .closebtn {
+    position: relative;
+    top: 90px;
+    left: 115px;
+    font-size: 30px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+
+}
+
+@media(max-width: 0px){
+  .overlay {
+    margin: 20px 20px 0;
+    width:auto;
+  }
+}
+
+
+
+.overlay h2, .overlay p {
+  color:white;
+  }
+
+.settingsHeader {
+  margin-bottom: 90px;
 }
