--- a/src/component/App.css
+++ b/src/component/App.css
@@ -1,4 +1,22 @@
+html body{
+  background: #acb6e5;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #86fde8, #acb6e5);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #86fde8, #acb6e5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+h1 {
+  color:black;
+}
+
+
+  }
 .app-content {
+  background: #8e9eab;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */
   width: 650px;
   margin-top: 100px;
   padding: 40px;
@@ -29,13 +47,6 @@
   margin-left: auto;
 }
 
-.unaryButton {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 2px;
-}
-
 .timerDisplay {
   background-color: grey;
   padding: 30px;
@@ -53,7 +64,7 @@
     top: 0;
     left: 0;
     background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    background-color: rgba(0,0,0, 1);
     overflow-x: hidden;
     transition: 0.5s;
 }
@@ -81,29 +92,10 @@
 
 .overlay .closebtn {
     position: relative;
-    top: 90px;
-    left: 115px;
+    text-align: center;
+    margin-top: 250px;
     font-size: 30px;
 }
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
-
-}
-
-@media(max-width: 0px){
-  .overlay {
-    margin: 20px 20px 0;
-    width:auto;
-  }
-}
-
-
 
 .overlay h2, .overlay p {
   color:white;
@@ -111,4 +103,8 @@
 
 .settingsHeader {
   margin-bottom: 90px;
+}
+
+.workSetupDisplay {
+  background-color: grey;
 }
