--- a/src/component/App.css
+++ b/src/component/App.css
@@ -1,110 +1,9 @@
 html body{
-  background: #acb6e5;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #86fde8, #acb6e5);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #86fde8, #acb6e5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #D31027;
+  background: -webkit-linear-gradient(to right, #EA384D, #D31027);
+  background: linear-gradient(to right, #EA384D, #D31027);
+}
 
 h1 {
-  color:black;
-}
-
-
-  }
-.app-content {
-  background: #8e9eab;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  -webkit-user-select: none;  /* Chrome all / Safari all */
-  -moz-user-select: none;     /* Firefox all */
-  -ms-user-select: none;      /* IE 10+ */
-  user-select: none;          /* Likely future */
-  width: 650px;
-  margin-top: 100px;
-  padding: 40px;
-  border: 1px solid black;
-  z-index: 1
-}
-
-.control-row {
-  margin-bottom: 3px;
-}
-
-.timerSetup {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-@media(max-width: 650px){
-  .app-content {
-    margin: 20px 20px 0;
-    width:auto;
-  }
-}
-
-.center-block {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.timerDisplay {
-  background-color: grey;
-  padding: 30px;
-  text-align: center;
-  margin: 60px;
-  height: 100px;
-  width: 400px;
-}
-
-.overlay {
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 1);
-    overflow-x: hidden;
-    transition: 0.5s;
-}
-
-.overlay-content {
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
-}
-
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-    color: red;
-}
-
-.overlay .closebtn {
-    position: relative;
-    text-align: center;
-    margin-top: 250px;
-    font-size: 30px;
-}
-
-.overlay h2, .overlay p {
   color:white;
-  }
-
-.settingsHeader {
-  margin-bottom: 90px;
-}
-
-.workSetupDisplay {
-  background-color: grey;
 }
